Css-end-- Animation heart & vignette_menu à faire

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </head>
 
   <body>
-    <header>
+    <header class="header_main">
       <a href="index.html" class="accueil">
         <img class="logo" src="logo/ohmyfood@2x.svg" alt="Logo oh my food" />
       </a>
