--- a/menu/la_palette_du_gout.html
+++ b/menu/la_palette_du_gout.html
@@ -27,8 +27,10 @@
   </head>
 
   <body>
-    <header>
-      <a href="../index.html" class="arrox">
+
+    <!------------------------------------------------------------------------------------->
+    <header class="header_menu">
+      <a href="../index.html" class="arrow">
         <i class="fas fa-arrow-left"></i>
       </a>
       <a href="../index.html" class="accueil">
@@ -44,85 +46,91 @@
     </section>
 
     <section class="menu">
+
+      <!-- Menu ----------------------------------------------------------------------------------->
+
       <div class="intro_legend">
         <h1>La palette du goût</h1>
         <i class="far fa-heart"></i>
       </div>
 
-      <h2>ENTREES</h2>
+      <div class="menu_container">
 
-      <span class="line"></span>
+        <!-- Entrées ----------------------------------------------------------------------------------->
 
-      <div class="entree">
-        <div class="entree_card">
-          <span class="name">Fricassée d'escargot</span>
-          <span class="subname">Au piment d'Espelette </span>
-          <span class="prix">25€</span>
+        <h2>ENTREES</h2>
+        <span class="line"></span>
+        <div class="entree">
+          <div class="entree_card">
+            <span class="name">Fricassée d'escargot</span>
+            <span class="subname">Au piment d'Espelette </span>
+            <span class="prix">25€</span>
+          </div>
+          <div class="entree_card">
+            <span class="name">Fricassée d'escargot</span>
+            <span class="subname">Au piment d'Espelette </span>
+            <span class="prix">35€</span>
+          </div>
+          <div class="entree_card">
+            <span class="name">Oeuf au plat</span>
+            <span class="subname">Assaisonné à la truffe sur lit de caviar</span>
+            <span class="prix">20€</span>
+          </div>
         </div>
 
-        <div class="entree_card">
-          <span class="name">Fricassée d'escargot</span>
-          <span class="subname">Au piment d'Espelette </span>
-          <span class="prix">35€</span>
+        <!-- Plats ----------------------------------------------------------------------------------->
+
+        <h2>PLATS</h2>
+        <span class="line"></span>
+        <div class="plats">
+          <div class="plats_card">
+            <span class="name">Filet de boeuf aux herbes</span>
+            <span class="subname">Accompagné de sa ribambelle de légumes</span>
+            <span class="prix">40€</span>
+          </div>
+          <div class="plats_card">
+            <span class="name">Parmentier de queue de boeuf</span>
+            <span class="subname">À la truffe noire sur sa purée de panais</span>
+            <span class="prix">35€</span>
+          </div>
+          <div class="plats_card">
+            <span class="name">Filet de turbot</span>
+            <span class="subname">Aux agrumes</span>
+            <span class="prix">44€</span>
+          </div>
         </div>
 
-        <div class="entree_card">
-          <span class="name">Oeuf au plat</span>
-          <span class="subname">Assaisonné à la truffe sur lit de caviar</span>
-          <span class="prix">20€</span>
-        </div>
-      </div>
+        <!-- Desserts ----------------------------------------------------------------------------------->
 
-      <h2>PLATS</h2>
-      <span class="line"></span>
-
-      <div class="plats">
-        <div class="plats_card">
-          <span class="name">Filet de boeuf aux herbes</span>
-          <span class="subname">Accompagné de sa ribambelle de légumes</span>
-          <span class="prix">40€</span>
-        </div>
-
-        <div class="plats_card">
-          <span class="name">Parmentier de queue de boeuf</span>
-          <span class="subname">À la truffe noire sur sa purée de panais</span>
-          <span class="prix">35€</span>
-        </div>
-
-        <div class="plats_card">
-          <span class="name">Filet de turbot</span>
-          <span class="subname">Aux agrumes</span>
-          <span class="prix">44€</span>
-        </div>
-      </div>
-
-      <h2>DESSERTS</h2>
-      <span class="line"></span>
-
-      <div class="dessert">
-        <div class="dessert_card">
-          <span class="name">Paris-Brest</span>
-          <span class="subname">Revisité</span>
-          <span class="prix">18€</span>
-        </div>
-
-        <div class="dessert_card">
-          <span class="name">Macaron au chocolat d'exception</span>
-          <span class="subname">Et glace à la vanille de Madagascar</span>
-          <span class="prix">22€</span>
-        </div>
-
-        <div class="dessert_card">
-          <span class="name">Mousse au chocolat</span>
-          <span class="subname"
-            >Au piment d'Espelette et à la truffe noire</span
-          >
-          <span class="prix">23€</span>
+        <h2>DESSERTS</h2>
+        <span class="line"></span>
+        <div class="dessert">
+          <div class="dessert_card">
+            <span class="name">Paris-Brest</span>
+            <span class="subname">Revisité</span>
+            <span class="prix">18€</span>
+          </div>
+          <div class="dessert_card">
+            <span class="name">Macaron au chocolat d'exception</span>
+            <span class="subname">Et glace à la vanille de Madagascar</span>
+            <span class="prix">22€</span>
+          </div>
+          <div class="dessert_card">
+            <span class="name">Mousse au chocolat</span>
+            <span class="subname"
+              >Au piment d'Espelette et à la truffe noire</span
+            >
+            <span class="prix">23€</span>
+          </div>
         </div>
       </div>
 
       <button>Commander</button>
+
+
     </section>
+
+    <!------------------------------------------------------------------------------------->
 
     <footer>
       <h2>oh my food</h2>
