--- a/menu/la_note_enchantée.html
+++ b/menu/la_note_enchantée.html
@@ -7,7 +7,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500&display=swap"
       rel="stylesheet"
     />
-    
+
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap"
@@ -27,7 +27,9 @@
   </head>
 
   <body>
-    <header>
+    <!-- header  ------------------------------------------------------------------------------------>
+
+    <header class="header_menu">
       <a href="../index.html" class="arrow">
         <i class="fas fa-arrow-left"></i>
       </a>
@@ -41,95 +43,97 @@
         src="../restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
         alt="La note enchantée"
       />
-
     </section>
-    
-    <section class="menu">
 
+    <!-- menu  ---------------------------------------------------------------------------------------->
+
+    <section class="menu">
       <div class="intro_legend">
         <h1>La note enchantée</h1>
         <i class="far fa-heart"></i>
       </div>
 
-      <h2>Entrées</h2>
+      <div class="menu_container">
 
-      <span class="line"></span>
+        <!-- Entrée ----------------------------------------------------------------------------------->
 
-      <div class="entree">
-        <div class="entree_card">
-          <span class="name">Ravioles de foie gras </span>
-          <span class="subname">Accompagnés de leur crème à la truffe</span>
-          <span class="prix">25€</span>
+        <h2>Entrées</h2>
+        <span class="line"></span>
+
+        <div class="entree">
+          <div class="entree_card">
+            <span class="name">Ravioles de foie gras </span>
+            <span class="subname">Accompagnés de leur crème à la truffe</span>
+            <span class="prix">25€</span>
+          </div>
+          <div class="entree_card">
+            <span class="name">Caviar osciètre</span>
+            <span class="subname">Sur blini à la farine de blé noir</span>
+            <span class="prix">35€</span>
+          </div>
+          <div class="entree_card">
+            <span class="name">Homard et espuma de potiron</span>
+            <span class="subname">Mariné aux zestes d'orange</span>
+            <span class="prix">20€</span>
+          </div>
+          <div class="entree_card">
+            <span class="name">Foie gras de canard cuit entier</span>
+            <span class="subname">Confiture de figue et pain toasté</span>
+            <span class="prix">35€</span>
+          </div>
         </div>
 
-        <div class="entree_card">
-          <span class="name">Caviar osciètre</span>
-          <span class="subname">Sur blini à la farine de blé noir</span>
-          <span class="prix">35€</span>
+        <!-- Plats ------------------------------------------------------------------------------------>
+
+        <h2>Plats</h2>
+        <span class="line"></span>
+        <div class="plats">
+          <div class="plats_card">
+            <span class="name">Noix de coquilles Saint-Jacques</span>
+            <span class="subname">Sur lit de purée de céleri-rave</span>
+            <span class="prix">40€</span>
+          </div>
+          <div class="plats_card">
+            <span class="name">Langoustine poêlée</span>
+            <span class="subname">Purée de patate douce</span>
+            <span class="prix">35€</span>
+          </div>
+          <div class="plats_card">
+            <span class="name">Mijoté de queue de boeuf </span>
+            <span class="subname">Et riz sauvage aux zestes de citron</span>
+            <span class="prix">44€</span>
+          </div>
         </div>
 
-        <div class="entree_card">
-          <span class="name">Homard et espuma de potiron</span>
-          <span class="subname">Mariné aux zestes d'orange</span>
-          <span class="prix">20€</span>
-        </div>
+        <!-- Desserts --------------------------------------------------------------------------------->
 
-        <div class="entree_card">
-          <span class="name">Foie gras de canard cuit entier</span>
-          <span class="subname">Confiture de figue et pain toasté</span>
-          <span class="prix">35€</span>
-        </div>
-
-      </div>
-
-      <h2>Plats</h2>
-      <span class="line"></span>
-
-      <div class="plats">
-        <div class="plats_card">
-          <span class="name">Noix de coquilles Saint-Jacques</span>
-          <span class="subname">Sur lit de purée de céleri-rave</span>
-          <span class="prix">40€</span>
-        </div>
-
-        <div class="plats_card">
-          <span class="name">Langoustine poêlée</span>
-          <span class="subname">Purée de patate douce</span>
-          <span class="prix">35€</span>
-        </div>
-
-        <div class="plats_card">
-          <span class="name">Mijoté de queue de boeuf </span>
-          <span class="subname">Et riz sauvage aux zestes de citron</span>
-          <span class="prix">44€</span>
-        </div>
-      </div>
-
-      <h2>Desserts</h2>
-      <span class="line"></span>
-
-      <div class="dessert">
-        <div class="dessert_card">
-          <span class="name">Macaron noisette et chocolat</span>
-          <span class="subname">Glace au caramel brun et sel de Guérande</span>
-          <span class="prix">18€</span>
-        </div>
-
-        <div class="dessert_card">
-          <span class="name">Baba au rhum revisité </span>
-          <span class="subname">Avec son coulis de citron</span>
-          <span class="prix">22€</span>
-        </div>
-
-        <div class="dessert_card">
-          <span class="name">Tarte au citron meringuée </span>
-          <span class="subname">Déstructurée</span>
-          <span class="prix">23€</span>
+        <h2>Desserts</h2>
+        <span class="line"></span>
+        <div class="dessert">
+          <div class="dessert_card">
+            <span class="name">Macaron noisette et chocolat</span>
+            <span class="subname"
+              >Glace au caramel brun et sel de Guérande</span
+            >
+            <span class="prix">18€</span>
+          </div>
+          <div class="dessert_card">
+            <span class="name">Baba au rhum revisité </span>
+            <span class="subname">Avec son coulis de citron</span>
+            <span class="prix">22€</span>
+          </div>
+          <div class="dessert_card">
+            <span class="name">Tarte au citron meringuée </span>
+            <span class="subname">Déstructurée</span>
+            <span class="prix">23€</span>
+          </div>
         </div>
       </div>
 
       <button>Commander</button>
     </section>
+
+    <!-- footer ------------------------------------------------------------------------------------->
 
     <footer>
       <h2>oh my food</h2>
