--- a/menu/le_délice_des_sens.html
+++ b/menu/le_délice_des_sens.html
@@ -27,16 +27,17 @@
   </head>
 
   <body>
-    <!-- header  -->
+    <!-- header  ------------------------------------------------------------------------------>
 
-    <header>
-      <a href="../index.html" class="arrox">
+    <header class="header_menu">
+      <a href="../index.html" class="arrow">
         <i class="fas fa-arrow-left"></i>
       </a>
       <a href="../index.html" class="accueil">
         <img class="logo" src="../logo/ohmyfood@2x.svg" alt="Logo oh my food" />
       </a>
     </header>
+
 
     <section class="intro">
       <img
@@ -46,85 +47,89 @@
     </section>
 
     <section class="menu">
+
+      <!-- Menu ----------------------------------------------------------------------------------->
+
       <div class="intro_legend">
         <h1>Le délice des sens</h1>
         <i class="far fa-heart"></i>
       </div>
       <!-- Les entréés  -->
 
-      <h2>ENTREES</h2>
+      <div class="menu_container">
 
-      <span class="line"></span>
+        <!-- Entrée ----------------------------------------------------------------------------------->
 
-      <div class="entree">
-        <div class="entree_card">
-          <span class="name">Tartare de thon</span>
-          <span class="subname">Assaisonné au yuzu</span>
-          <span class="prix">25€</span>
+        <h2>ENTREES</h2>
+        <span class="line">
+        </span>
+        <div class="entree">
+          <div class="entree_card">
+            <span class="name">Tartare de thon</span>
+            <span class="subname">Assaisonné au yuzu</span>
+            <span class="prix">25€</span>
+          </div>
+          <div class="entree_card">
+            <span class="name">Bouchée de homard croustillant </span>
+            <span class="subname">Et sa farandole de petits légumes</span>
+            <span class="prix">35€</span>
+          </div>
+          <div class="entree_card">
+            <span class="name">Velouté de cèpes </span>
+            <span class="subname">Aux truffes</span>
+            <span class="prix">20€</span>
+          </div>
         </div>
 
-        <div class="entree_card">
-          <span class="name">Bouchée de homard croustillant </span>
-          <span class="subname">Et sa farandole de petits légumes</span>
-          <span class="prix">35€</span>
+        <!-- Plats ----------------------------------------------------------------------------------->
+
+        <h2>PLATS</h2>
+        <span class="line"></span>
+        <div class="plats">
+          <div class="plats_card">
+            <span class="name">Poulet rôti aux herbes de Provence </span>
+            <span class="subname">Et sa crème de truffe</span>
+            <span class="prix">40€</span>
+          </div>
+          <div class="plats_card">
+            <span class="name">Langouste rôtie </span>
+            <span class="subname">Et ses légumes de saison</span>
+            <span class="prix">35€</span>
+          </div>
+          <div class="plats_card">
+            <span class="name">Côte de boeuf Angus </span>
+            <span class="subname">Et sa purée de panais</span>
+            <span class="prix">44€</span>
+          </div>
         </div>
 
-        <div class="entree_card">
-          <span class="name">Velouté de cèpes </span>
-          <span class="subname">Aux truffes</span>
-          <span class="prix">20€</span>
-        </div>
-      </div>
+        <!-- Desserts ----------------------------------------------------------------------------------->
 
-      <h2>PLATS</h2>
-      <span class="line"></span>
-
-      <div class="plats">
-        <div class="plats_card">
-          <span class="name">Poulet rôti aux herbes de Provence </span>
-          <span class="subname">Et sa crème de truffe</span>
-          <span class="prix">40€</span>
-        </div>
-
-        <div class="plats_card">
-          <span class="name">Langouste rôtie </span>
-          <span class="subname">Et ses légumes de saison</span>
-          <span class="prix">35€</span>
-        </div>
-
-        <div class="plats_card">
-          <span class="name">Côte de boeuf Angus </span>
-          <span class="subname">Et sa purée de panais</span>
-          <span class="prix">44€</span>
-        </div>
-      </div>
-
-      <h2>DESSERTS</h2>
-      <span class="line"></span>
-
-      <div class="dessert">
-        <div class="dessert_card">
-          <span class="name">Farandole de desserts</span>
-          <span class="subname">Du chef</span>
-          <span class="prix">18€</span>
-        </div>
-
-        <div class="dessert_card">
-          <span class="name">Crème brulée</span>
-          <span class="subname">Revisitée</span>
-          <span class="prix">22€</span>
-        </div>
-
-        <div class="dessert_card">
-          <span class="name">Tiramisu </span>
-          <span class="subname">À la noisette</span>
-          <span class="prix">23€</span>
+        <h2>DESSERTS</h2>
+        <span class="line"></span>
+        <div class="dessert">
+          <div class="dessert_card">
+            <span class="name">Farandole de desserts</span>
+            <span class="subname">Du chef</span>
+            <span class="prix">18€</span>
+          </div>
+          <div class="dessert_card">
+            <span class="name">Crème brulée</span>
+            <span class="subname">Revisitée</span>
+            <span class="prix">22€</span>
+          </div>
+          <div class="dessert_card">
+            <span class="name">Tiramisu </span>
+            <span class="subname">À la noisette</span>
+            <span class="prix">23€</span>
+          </div>
         </div>
       </div>
 
       <button>Commander</button>
-    </section>
 
+    </section>
+    <!------------------------------------------------------------------------------------>
     <footer>
       <h2>oh my food</h2>
 
