--- a/menu/la_palette_du_gout.html
+++ b/menu/la_palette_du_gout.html
@@ -65,6 +65,7 @@
             <span class="name">Fricassée d'escargot</span>
             <span class="subname">Au piment d'Espelette </span>
             <span class="prix">25€</span>
+            <i class="fas fa-check-circle"></i>
           </div>
           <div class="entree_card">
             <span class="name">Fricassée d'escargot</span>
