media query tablette ok, desktop a finir. heart animation non-fini

--- a/menu/la_note_enchantée.html
+++ b/menu/la_note_enchantée.html
@@ -57,75 +57,97 @@
 
         <!-- Entrée ----------------------------------------------------------------------------------->
 
-        <h2>Entrées</h2>
-        <span class="line"></span>
-
+        
         <div class="entree">
+          <h2>Entrées</h2>
+          <span class="line"></span>
           <div class="entree_card">
             <span class="name">Ravioles de foie gras </span>
             <span class="subname">Accompagnés de leur crème à la truffe</span>
             <span class="prix">25€</span>
+            <i class="fas fa-check-circle"></i>
+            <div class="green_check"></div>
           </div>
           <div class="entree_card">
             <span class="name">Caviar osciètre</span>
             <span class="subname">Sur blini à la farine de blé noir</span>
             <span class="prix">35€</span>
+            <i class="fas fa-check-circle"></i>
+            <div class="green_check"></div>
           </div>
           <div class="entree_card">
-            <span class="name">Homard et espuma de potiron</span>
-            <span class="subname">Mariné aux zestes d'orange</span>
+          <span class="name">Homard et espuma de potiron</span>
+          <span class="subname">Mariné aux zestes d'orange</span>
             <span class="prix">20€</span>
+            <i class="fas fa-check-circle"></i>
+            <div class="green_check"></div>
           </div>
           <div class="entree_card">
             <span class="name">Foie gras de canard cuit entier</span>
             <span class="subname">Confiture de figue et pain toasté</span>
             <span class="prix">35€</span>
+            <i class="fas fa-check-circle"></i>
+            <div class="green_check"></div>
           </div>
         </div>
 
         <!-- Plats ------------------------------------------------------------------------------------>
 
-        <h2>Plats</h2>
-        <span class="line"></span>
         <div class="plats">
+          <h2>Plats</h2>
+          <span class="line"></span>
           <div class="plats_card">
             <span class="name">Noix de coquilles Saint-Jacques</span>
             <span class="subname">Sur lit de purée de céleri-rave</span>
             <span class="prix">40€</span>
+            <i class="fas fa-check-circle"></i>
+            <div class="green_check"></div>
           </div>
           <div class="plats_card">
             <span class="name">Langoustine poêlée</span>
             <span class="subname">Purée de patate douce</span>
             <span class="prix">35€</span>
+            <i class="fas fa-check-circle"></i>
+            <div class="green_check"></div>
           </div>
           <div class="plats_card">
             <span class="name">Mijoté de queue de boeuf </span>
             <span class="subname">Et riz sauvage aux zestes de citron</span>
             <span class="prix">44€</span>
+            <i class="fas fa-check-circle"></i>
+            <div class="green_check"></div>
           </div>
         </div>
 
         <!-- Desserts --------------------------------------------------------------------------------->
 
-        <h2>Desserts</h2>
-        <span class="line"></span>
+        <span class="separator"></span>
+        
         <div class="dessert">
+          <h2>Desserts</h2>
+          <span class="line"></span>
           <div class="dessert_card">
             <span class="name">Macaron noisette et chocolat</span>
             <span class="subname"
               >Glace au caramel brun et sel de Guérande</span
             >
             <span class="prix">18€</span>
+            <i class="fas fa-check-circle"></i>
+            <div class="green_check"></div>
           </div>
           <div class="dessert_card">
             <span class="name">Baba au rhum revisité </span>
             <span class="subname">Avec son coulis de citron</span>
             <span class="prix">22€</span>
+            <i class="fas fa-check-circle"></i>
+            <div class="green_check"></div>
           </div>
           <div class="dessert_card">
             <span class="name">Tarte au citron meringuée </span>
             <span class="subname">Déstructurée</span>
             <span class="prix">23€</span>
+            <i class="fas fa-check-circle"></i>
+            <div class="green_check"></div>
           </div>
         </div>
       </div>
