--- a/index.html
+++ b/index.html
@@ -33,125 +33,128 @@
       </a>
     </header>
 
-    <!-- Réservation  -->
-
-    <section class="find_container">
-      <div class="find_container_local">
-        <i class="fas fa-map-marker-alt"></i>
-        <p>Paris, Belleville</p>
-      </div>
-
-      <div class="find_container_reserve">
-        <div class="find_container_reserve_title">
-          <h1>Réservez le menu qui vous convient</h1>
-          <p>
-            Découvrez des restaurants d'exception, séléctionnés par nos soins
-          </p>
-        </div>
-
-        <button>Explorer nos restaurants</button>
-      </div>
-    </section>
-
-    <!-- Fonctionnement  -->
-
-    <section class="use_container">
-      <h2>Fonctionnement</h2>
-
-      <div class="use_container_card">
-        <div class="use_container_card_template">
-          <div class="number">1</div>
-          <i class="fas fa-mobile-alt"></i>
-          <p>Choisissez un restaurant</p>
-        </div>
-
-        <div class="use_container_card_template">
-          <div class="number">2</div>
-          <i class="fas fa-list-ul"></i>
-          <p>Composez votre menu</p>
-        </div>
-
-        <div class="use_container_card_template">
-          <div class="number">3</div>
-          <i class="fas fa-store"></i>
-          <p>Dégustez au restaurant</p>
-        </div>
-      </div>
-    </section>
-
-    <!-- Restaurants  -->
-
-    <section class="resto">
-      <h2>Restaurants</h2>
-
+    <section class="loader">
       <div class="loading_animation">
         <div class="circle"></div>
         <div class="line"></div>
       </div>
+    </section>
 
-      <div class="resto_container">
-        <div class="resto_container_card">
-          <a href="menu/la_palette_du_gout.html">
-            <img
-              src="restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
-              alt="La palette du goût"
-            />
+    <!-- Réservation  -->
 
-            <div class="legend">
-              <span class="name">La palette du goût</span>
-              <span class="loc">Ménilmontant</span>
-            </div>
-          </a>
-          <i class="far fa-heart"></i>
+    <section class="pages">
+      <section class="find_container">
+        <div class="find_container_local">
+          <i class="fas fa-map-marker-alt"></i>
+          <p>Paris, Belleville</p>
         </div>
-
-        <div class="resto_container_card">
-          <a href="menu/la_note_enchantée.html">
-            <img
-              src="restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
-              alt="La note enchantée"
-            />
-
-            <div class="legend">
-              <span class="name">La note enchantée</span>
-              <span class="loc">Charonne</span>
-            </div>
-          </a>
-          <i class="far fa-heart"></i>
+        <div class="find_container_reserve">
+          <div class="find_container_reserve_title">
+            <h1>Réservez le menu qui vous convient</h1>
+            <p>
+              Découvrez des restaurants d'exception, séléctionnés par nos soins
+            </p>
+          </div>
+          <button>Explorer nos restaurants</button>
         </div>
+      </section>
+      <!-- Fonctionnement  -->
+      <section class="use_container">
+        <h2>Fonctionnement</h2>
 
-        <div class="resto_container_card">
-          <a href="menu/a_la_française.html">
-            <img
-              src="restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
-              alt="A la française"
-            />
+        <div class="use_container_card">
 
-            <div class="legend">
-              <span class="name">A la française</span>
-              <span class="loc">Cité Rouge</span>
-            </div>
-          </a>
+          <div class="use_container_card_template">
 
-          <i class="far fa-heart"></i>
+            <div class="number">1</div>
+            <i class="fas fa-mobile-alt"></i>
+            <p>Choisissez un restaurant</p>
+            
+          </div>
+          <div class="use_container_card_template">
+            <div class="number">2</div>
+            <i class="fas fa-list-ul"></i>
+            <p>Composez votre menu</p>
+          </div>
+          <div class="use_container_card_template">
+            <div class="number">3</div>
+            <i class="fas fa-store"></i>
+            <p>Dégustez au restaurant</p>
+          </div>
         </div>
+      </section>
 
-        <div class="resto_container_card">
-          <a href="menu/le_délice_des_sens.html">
-            <img
-              src="restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
-              alt="Le délice des sens"
-            />
+      <!-- Restaurants  -->
 
-            <div class="legend">
-              <span class="name">Le délice des sens</span>
-              <span class="loc">Folie-Méricourt</span>
+      <section class="resto">
+
+        <h2>Restaurants</h2>
+
+        <div class="resto_container">
+
+          <div class="resto_container_card">
+
+            <a href="menu/la_palette_du_gout.html">
+              <img
+                src="restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                alt="La palette du goût"
+              />
+              <div class="legend">
+                <span class="name">La palette du goût</span>
+                <span class="loc">Ménilmontant</span>
+              </div>
+            </a>
+            <div class="test">
+              <i class="fas fa-heart"></i>
             </div>
-          </a>
+            <div class="hovertest">
+              <i class="far fa-heart"></i>
+            </div>
+          </div>
 
-          <i class="far fa-heart"></i>
+          <div class="resto_container_card">
+            <a href="menu/la_note_enchantée.html">
+              <img
+                src="restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+                alt="La note enchantée"
+              />
+              <div class="legend">
+                <span class="name">La note enchantée</span>
+                <span class="loc">Charonne</span>
+              </div>
+            </a>
+            <i class="far fa-heart"></i>
+          </div>
+
+          <div class="resto_container_card">
+            <a href="menu/a_la_française.html">
+              <img
+                src="restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+                alt="A la française"
+              />
+              <div class="legend">
+                <span class="name">A la française</span>
+                <span class="loc">Cité Rouge</span>
+              </div>
+            </a>
+            <i class="far fa-heart"></i>
+          </div>
+          <div class="resto_container_card">
+
+            <a href="menu/le_délice_des_sens.html">
+              <img
+                src="restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                alt="Le délice des sens"
+              />
+              <div class="legend">
+                <span class="name">Le délice des sens</span>
+                <span class="loc">Folie-Méricourt</span>
+              </div>
+            </a>
+            <i class="far fa-heart"></i>
+          </div>
         </div>
-      </div>
+      </section>
     </section>
 
     <footer>
