--- a/menu/a_la_française.html
+++ b/menu/a_la_française.html
@@ -59,67 +59,87 @@
 
         <!-- Entrée ----------------------------------------------------------------------------------->
 
-        <h2>ENTREES</h2>
-        <span class="line"></span>
         <div class="entree">
+          <h2>ENTREES</h2>
+          <span class="line"></span>
           <div class="entree_card">
             <span class="name">Tartare de poulpe acidulé</span>
             <span class="subname">Aux zestes d'orange</span>
             <span class="prix">25€</span>
+            <i class="fas fa-check-circle"></i>
+            <div class="green_check"></div>
           </div>
           <div class="entree_card">
             <span class="name">Velouté de légumes d'antan</span>
             <span class="subname">Carotte, panais, topinambour</span>
             <span class="prix">35€</span>
+            <i class="fas fa-check-circle"></i>
+            <div class="green_check"></div>
           </div>
           <div class="entree_card">
             <span class="name">Soupe à l'oignon</span>
             <span class="subname">Revisitée</span>
             <span class="prix">20€</span>
+            <i class="fas fa-check-circle"></i>
+            <div class="green_check"></div>
           </div>
         </div>
 
         <!-- Plats ----------------------------------------------------------------------------------->
 
-        <h2>PLATS</h2>
-        <span class="line"></span>
         <div class="plats">
+          <h2>PLATS</h2>
+          <span class="line"></span>
           <div class="plats_card">
             <span class="name">Coquilles Saint-Jacques</span>
             <span class="subname">Accompagnées d'une purée de panais</span>
             <span class="prix">40€</span>
+            <i class="fas fa-check-circle"></i>
+            <div class="green_check"></div>
           </div>
           <div class="plats_card">
             <span class="name">Magret de canard</span>
             <span class="subname">Et parmentier de pommes de terre</span>
             <span class="prix">35€</span>
+            <i class="fas fa-check-circle"></i>
+            <div class="green_check"></div>
           </div>
           <div class="plats_card">
             <span class="name">Pigeonneau d’Ille-et-Vilaine</span>
             <span class="subname">Sur son lit de gnocchis aux légumes</span>
             <span class="prix">44€</span>
+            <i class="fas fa-check-circle"></i>
+            <div class="green_check"></div>
           </div>
         </div>
 
         <!-- desserts ----------------------------------------------------------------------------------->
 
-        <h2>DESSERTS</h2>
-        <span class="line"></span>
+        <span class="separator"></span>
+        
         <div class="dessert">
+          <h2>DESSERTS</h2>
+          <span class="line"></span>
           <div class="dessert_card">
             <span class="name">Pétales de violettes glacés</span>
             <span class="subname">Et purée de noisettes</span>
             <span class="prix">18€</span>
+            <i class="fas fa-check-circle"></i>
+            <div class="green_check"></div>
           </div>
           <div class="dessert_card">
             <span class="name">Fondant au chocolat</span>
             <span class="subname">Revisité</span>
             <span class="prix">22€</span>
+            <i class="fas fa-check-circle"></i>
+            <div class="green_check"></div>
           </div>
           <div class="dessert_card">
             <span class="name">Millefeuille croustillant</span>
             <span class="subname">Myrtilles et pâte d’amande</span>
-            <span class="prix">23€</span>
+            <span class="prix">23€</span>            
+            <i class="fas fa-check-circle"></i>
+            <div class="green_check"></div>
           </div>
         </div>
       </div>
