--- a/menu/la_palette_du_gout.html
+++ b/menu/la_palette_du_gout.html
@@ -58,63 +58,80 @@
 
         <!-- Entrées ----------------------------------------------------------------------------------->
 
-        <h2>ENTREES</h2>
-        <span class="line"></span>
         <div class="entree">
+          <h2>ENTREES</h2>
+          <span class="line"></span>
           <div class="entree_card">
             <span class="name">Fricassée d'escargot</span>
             <span class="subname">Au piment d'Espelette </span>
             <span class="prix">25€</span>
             <i class="fas fa-check-circle"></i>
+            <div class="green_check"></div>
           </div>
           <div class="entree_card">
             <span class="name">Fricassée d'escargot</span>
             <span class="subname">Au piment d'Espelette </span>
             <span class="prix">35€</span>
+            <i class="fas fa-check-circle"></i>
+            <div class="green_check"></div>
           </div>
           <div class="entree_card">
             <span class="name">Oeuf au plat</span>
             <span class="subname">Assaisonné à la truffe sur lit de caviar</span>
             <span class="prix">20€</span>
+            <i class="fas fa-check-circle"></i>
+            <div class="green_check"></div>
           </div>
         </div>
 
         <!-- Plats ----------------------------------------------------------------------------------->
 
-        <h2>PLATS</h2>
-        <span class="line"></span>
         <div class="plats">
+          <h2>PLATS</h2>
+          <span class="line"></span>
           <div class="plats_card">
             <span class="name">Filet de boeuf aux herbes</span>
             <span class="subname">Accompagné de sa ribambelle de légumes</span>
             <span class="prix">40€</span>
+            <i class="fas fa-check-circle"></i>
+            <div class="green_check"></div>
           </div>
           <div class="plats_card">
             <span class="name">Parmentier de queue de boeuf</span>
             <span class="subname">À la truffe noire sur sa purée de panais</span>
             <span class="prix">35€</span>
+            <i class="fas fa-check-circle"></i>
+            <div class="green_check"></div>
           </div>
           <div class="plats_card">
             <span class="name">Filet de turbot</span>
             <span class="subname">Aux agrumes</span>
             <span class="prix">44€</span>
+            <i class="fas fa-check-circle"></i>
+            <div class="green_check"></div>
           </div>
         </div>
 
         <!-- Desserts ----------------------------------------------------------------------------------->
 
-        <h2>DESSERTS</h2>
-        <span class="line"></span>
+        <span class="separator"></span>
+        
         <div class="dessert">
+          <h2>DESSERTS</h2>
+          <span class="line"></span>
           <div class="dessert_card">
             <span class="name">Paris-Brest</span>
             <span class="subname">Revisité</span>
             <span class="prix">18€</span>
+            <i class="fas fa-check-circle"></i>
+            <div class="green_check"></div>
           </div>
           <div class="dessert_card">
             <span class="name">Macaron au chocolat d'exception</span>
             <span class="subname">Et glace à la vanille de Madagascar</span>
             <span class="prix">22€</span>
+            <i class="fas fa-check-circle"></i>
+            <div class="green_check"></div>
           </div>
           <div class="dessert_card">
             <span class="name">Mousse au chocolat</span>
@@ -122,6 +139,8 @@
               >Au piment d'Espelette et à la truffe noire</span
             >
             <span class="prix">23€</span>
+            <i class="fas fa-check-circle"></i>
+            <div class="green_check"></div>
           </div>
         </div>
       </div>
