--- a/index.html
+++ b/index.html
@@ -58,18 +58,17 @@
           <button>Explorer nos restaurants</button>
         </div>
       </section>
-      <!-- Fonctionnement  -->
+
+      <!-- Fonctionnement  ------------------------------------------------------------>
+
       <section class="use_container">
         <h2>Fonctionnement</h2>
 
         <div class="use_container_card">
-
           <div class="use_container_card_template">
-
             <div class="number">1</div>
             <i class="fas fa-mobile-alt"></i>
             <p>Choisissez un restaurant</p>
-            
           </div>
           <div class="use_container_card_template">
             <div class="number">2</div>
@@ -84,17 +83,16 @@
         </div>
       </section>
 
-      <!-- Restaurants  -->
+      <!-- Restaurants  -------------------------------------------------------------->
 
       <section class="resto">
-
         <h2>Restaurants</h2>
 
         <div class="resto_container">
 
           <div class="resto_container_card">
-
             <a href="menu/la_palette_du_gout.html">
+              <span class="new">Nouveau</span>
               <img
                 src="restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
                 alt="La palette du goût"
@@ -104,16 +102,16 @@
                 <span class="loc">Ménilmontant</span>
               </div>
             </a>
-            <div class="test">
-              <i class="fas fa-heart"></i>
-            </div>
-            <div class="hovertest">
-              <i class="far fa-heart"></i>
+
+            <div class="heart">
+              <i class="fas fa-heart state_1"></i>
+              <i class="far fa-heart state_2"></i>
             </div>
           </div>
 
           <div class="resto_container_card">
             <a href="menu/la_note_enchantée.html">
+              <span class="new">Nouveau</span>
               <img
                 src="restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
                 alt="La note enchantée"
@@ -123,7 +121,10 @@
                 <span class="loc">Charonne</span>
               </div>
             </a>
-            <i class="far fa-heart"></i>
+            <div class="heart">
+              <i class="fas fa-heart state_1"></i>
+              <i class="far fa-heart state_2"></i>
+            </div>
           </div>
 
           <div class="resto_container_card">
@@ -137,10 +138,13 @@
                 <span class="loc">Cité Rouge</span>
               </div>
             </a>
-            <i class="far fa-heart"></i>
+
+            <div class="heart">
+              <i class="fas fa-heart state_1"></i>
+              <i class="far fa-heart state_2"></i>
+            </div>
           </div>
           <div class="resto_container_card">
-
             <a href="menu/le_délice_des_sens.html">
               <img
                 src="restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
@@ -151,7 +155,10 @@
                 <span class="loc">Folie-Méricourt</span>
               </div>
             </a>
-            <i class="far fa-heart"></i>
+            <div class="heart">
+              <i class="fas fa-heart state_1"></i>
+              <i class="far fa-heart state_2"></i>
+            </div>
           </div>
         </div>
       </section>
@@ -172,7 +179,7 @@
 
       <a href="#">Mentions légales</a>
 
-      <a href="#">Contact</a>
+      <a href="mailto:adresse@serveur.com">Contact</a>
     </footer>
   </body>
 </html>
