--- a/menu/a_la_française.html
+++ b/menu/a_la_française.html
@@ -52,7 +52,10 @@
 
       <div class="intro_legend">
         <h1>A la française</h1>
-        <i class="far fa-heart"></i>
+        <div class="heart">
+          <i class="fas fa-heart state_1"></i>
+          <i class="far fa-heart state_2"></i>
+        </div>
       </div>
       
       <div class="menu_container">
