--- a/menu/la_note_enchantée.html
+++ b/menu/la_note_enchantée.html
@@ -50,7 +50,10 @@
     <section class="menu">
       <div class="intro_legend">
         <h1>La note enchantée</h1>
-        <i class="far fa-heart"></i>
+        <div class="heart">
+          <i class="fas fa-heart state_1"></i>
+          <i class="far fa-heart state_2"></i>
+        </div>
       </div>
 
       <div class="menu_container">
