--- a/menu/la_palette_du_gout.html
+++ b/menu/la_palette_du_gout.html
@@ -51,7 +51,10 @@
 
       <div class="intro_legend">
         <h1>La palette du goût</h1>
-        <i class="far fa-heart"></i>
+        <div class="heart">
+          <i class="fas fa-heart state_1"></i>
+          <i class="far fa-heart state_2"></i>
+        </div>
       </div>
 
       <div class="menu_container">
