--- a/menu/le_délice_des_sens.html
+++ b/menu/le_délice_des_sens.html
@@ -50,7 +50,10 @@
 
       <div class="intro_legend">
         <h1>Le délice des sens</h1>
-        <i class="far fa-heart"></i>
+        <div class="heart">
+          <i class="fas fa-heart state_1"></i>
+          <i class="far fa-heart state_2"></i>
+        </div>
       </div>
       
       
