Modif des menus: .intro: section -> div, commentaires moins long

--- a/menu/la_palette_du_gout.html
+++ b/menu/la_palette_du_gout.html
@@ -28,7 +28,6 @@
 
   <body>
 
-    <!------------------------------------------------------------------------------------->
     <header class="header_menu">
       <a href="../index.html" class="arrow">
         <i class="fas fa-arrow-left"></i>
@@ -38,16 +37,16 @@
       </a>
     </header>
 
-    <section class="intro">
+    <div class="intro">
       <img
         src="../restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
         alt="La palette du goût"
       />
-    </section>
+    </div>
 
     <section class="menu">
 
-      <!-- Menu ----------------------------------------------------------------------------------->
+      <!-- Menu -->
 
       <div class="intro_legend">
         <h1>La palette du goût</h1>
@@ -59,7 +58,7 @@
 
       <div class="menu_container">
 
-        <!-- Entrées ----------------------------------------------------------------------------------->
+        <!-- Entrées -->
 
         <div class="entree">
           <h2>ENTREES</h2>
@@ -87,7 +86,7 @@
           </div>
         </div>
 
-        <!-- Plats ----------------------------------------------------------------------------------->
+        <!-- Plats -->
 
         <div class="plats">
           <h2>PLATS</h2>
@@ -115,7 +114,7 @@
           </div>
         </div>
 
-        <!-- Desserts ----------------------------------------------------------------------------------->
+        <!-- Desserts -->
 
         <span class="separator"></span>
         
@@ -153,7 +152,7 @@
 
     </section>
 
-    <!------------------------------------------------------------------------------------->
+    <!-- End -->
 
     <footer>
       <h2>oh my food</h2>
