Contact avec mail

--- a/menu/la_palette_du_gout.html
+++ b/menu/la_palette_du_gout.html
@@ -169,7 +169,7 @@
 
       <a href="#">Mentions légales</a>
 
-      <a href="#">Contact</a>
+      <a href="mailto:adresse@serveur.com">Contact</a>
     </footer>
   </body>
 </html>
