--- a/menu/le_délice_des_sens.html
+++ b/menu/le_délice_des_sens.html
@@ -168,7 +168,7 @@
 
       <a href="#">Mentions légales</a>
 
-      <a href="#">Contact</a>
+      <a href="mailto:adresse@serveur.com">Contact</a>
     </footer>
   </body>
 </html>
